--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-packager": "^13.1.1",
     "electron-rebuild": "^1.8.5",
     "mocha": "^6.1.4",
+    "nested-error-stacks": "^2.1.0",
     "seedrandom": "^3.0.1",
     "simple-git": "^1.124.0"
   },
