Amend content of first level

--- a/example/resources/level-data/lost-index.yaml
+++ b/example/resources/level-data/lost-index.yaml
@@ -19,7 +19,7 @@ asset_index:
     description:illustrate:explain-blocking: |+2
       .md
       **「圖解」**區塊可以搭配圖片說明 ~~其實跟解說好像有點重複~~  
-      順帶一提，本教學有進度的概念。被阻擋而尚未解鎖的區塊無法提前操作，並且視覺上可以感覺得出來。如下圖的範例：  
+      此教學程式有進度的概念。被阻擋而尚未解鎖的區塊無法提前操作，並且視覺上可以感覺得出來。如下圖的範例：  
 
       ![blocking]({{level-data/demo/image:blocking}})  
 
@@ -43,38 +43,36 @@ asset_index:
     description:elaborate:explain-load-reference-and-checkpoint: |+2
       .md
       身為 git 教學，一定少不了 git 倉庫(repository)  
-      兩步前的**「載入 git 倉庫」**區塊就是負責載入預先設計好的 git 倉庫。
-      通常這個步驟會在一個教學關卡的第一步進行
+      下一步的**「載入 git 倉庫」**區塊將會負責載入預先設計好的 git 倉庫
 
-      **「存檔點」**區塊會在推動進度時自動保存工作目錄狀態，以方便使用者在~~掉進異次元~~操作失敗的時候回復到初始狀態  
-      如果想要體驗存檔點的效果，可以打開工作目錄，隨意修改，然後「讀取」存檔點  
+      與**「載入 git 倉庫」**會同步出現的是**「存檔點」**區塊  
+      「存檔點」區塊會在推動進度時自動保存工作目錄狀態，以方便使用者在~~掉進異次元~~操作失敗的時候回復到初始狀態  
 
-      說到這裡，為了方便使用者快速開啟工作目錄所在位置，設計了開啟工作目錄的區塊，也就是下一個區塊。
+      這兩個區塊都會在進度推進時自動執行  
+      請按下右下角的「確認」按鈕繼續推進進度
+
+    description:elaborate:explain-open-working-path: |+2
+      .md
+      現在， git 倉庫已經自動的載入到這個您的電腦中，在教學中將著重在與此倉庫的互動
+      這個教學也會指引使用者進行特定的檔案操作，並且檢查其結果是否正確  
+
+      為了方便快速開啟工作目錄所在位置，有專門的區塊可供使用者操作  
       請在下一個區塊中按下「執行」開啟目錄所在位置
 
     description:instruct:delete-folder: |+2
       .md
-      現在我們有了現成的倉庫，在教學中將著重在與此倉庫的互動。  
-      除了指引回答問題外，這個教學也會指引使用者進行特定的檔案操作，並且檢查其結果是否正確。  
+      現在您應該已經透過上一個區塊開啟了工作目錄所在位置，接下來請讓我們體驗如何查驗指定的檔案操作  
 
-      以下就是一個範例的檢查。  
-      
       請試著將**「folder」**資料夾刪除  
       在操作前，可以試著在按照指示操作前先直接按下「確認」按鈕體驗檢驗失敗的情況  
       然後，再把資料夾刪除完成後，請再次按下確認按鈕檢驗
 
     description:elaborate:checkpoint: |+2
       .md
-      目前的設計中，存檔點除了恢復工作目錄的狀態，還會倒回教學的進度  
-      如有興趣，可以回到上一個存檔點按下「讀取」  
+      恭喜您又儲存一個存檔點  
+      現在，如果讀取前一個存檔點，就會把先前的操作清除，並且把這一個區塊變回被阻擋狀態，請嘗試看看  
       
       或者，也可以直接繼續往下進行
-
-    description:elaborate:load-checkpoint: |+2
-      .md
-      恭喜您又儲存一個存檔點  
-
-      現在，如果讀取前一個存檔點，就會把先前的操作清除，並且把這一個區塊變回被阻擋狀態，請嘗試看看
 
     description:elaborate:reset: |+2
       .md
