--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
 {
     "yaml.schemas": {
+        "json-schemas/course.json": "course/*.yaml",
         "json-schemas/asset-index.json": "*-index.yaml",
         "json-schemas/level.json": "levels/*.yaml",
-        "json-schemas/generate-repo.json": "generate-*-repo.yaml"
+        "json-schemas/generate-repo.json": "generate-*-repo.yaml",
     },
     "yaml.customTags": [
+        "!course mapping",
         "!level mapping",
+
+        "!sequential-section mapping",
+        "!free-access-section mapping",
+
         "!repoVcs mapping",
 
         "!act.writeFile mapping",
