Add schema for loadLastLevelFinalSnapshotStep

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "!checkpoint mapping",
         "!loadReference mapping",
         "!playActions mapping",
+        "!loadLastLevelFinalSnapshot mapping",
         "!openWorkingPath mapping",
 
         "!dev.needAction mapping",
