--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "yaml.schemas": {
-        "json-schemas/course.json": "course/*.yaml",
+        "json-schemas/course.json": "*/course/*.yaml",
         "json-schemas/asset-index.json": "*-index.yaml",
-        "json-schemas/level.json": "levels/*.yaml",
+        "json-schemas/level.json": "*/levels/*.yaml",
         "json-schemas/generate-repo.json": "generate-*-repo.yaml",
     },
     "yaml.customTags": [
