--- a/example/resources/course/fork.yaml
+++ b/example/resources/course/fork.yaml
@@ -10,3 +10,7 @@
           id: "fork-main-intro-install"
           nameKey: "levels/main.intro-install.name"
           configAssetId: "levels/intro-install"
+        - !level
+          id: "fork-main-intro-basic-usage"
+          nameKey: "levels/main.intro-basic-usage.name"
+          configAssetId: "levels/intro-basic-usage"
