intro-basic-usage (WIP)

--- a/example/course-resources/fork/level-data/intro-basic-usage-index.yaml
+++ b/example/course-resources/fork/level-data/intro-basic-usage-index.yaml
@@ -21,4 +21,11 @@ asset_index:
 
     introduce-open-folder: |+2
       .md
-      在我們的教學中，時常需要使用 fork 開啟特定資料夾進行操作
+      本教學中常常會需要開啟特定檔案目錄，修改裡面的檔案  
+
+      為了方便快速開啟工作目錄所在位置，有專門的區塊可供使用者操作  
+      請在下一個區塊中按下「執行」開啟目錄所在位置
+
+    open-directory-in-fork: |+2
+      .md
+
