--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "json-schemas/asset-index.json": "*-index.yaml",
         "json-schemas/level.json": "*/levels/*.yaml",
         "json-schemas/generate-repo.json": "generate-*-repo.yaml",
+        "json-schemas/serialized-course-settings.json": "/*-course-settings.yaml"
     },
     "yaml.customTags": [
         "!course mapping",
