Correct config error

--- a/example/course-resources/fork/levels/intro-open-repository.yaml
+++ b/example/course-resources/fork/levels/intro-open-repository.yaml
@@ -1,6 +1,6 @@
 !level
   repoVcsSetups:
-    fork-basic:
+    basic:
       workingPath: basic
       referenceStoreName: basic-operation
   steps:
